templates and notes and whatever else

--- a/CompozeElectron/Views/Shared/_AppSettings.cshtml
+++ b/CompozeElectron/Views/Shared/_AppSettings.cshtml
@@ -8,6 +8,10 @@
             <label for="darkMode">Dark Mode: </label>
             <input type="checkbox" value="true" checked="@Model.DarkMode" name="darkMode" id="darkMode" />           
         </div>
+        <div class="row space-between">
+            <label for="oneNoteOnly">One Note Only: </label>
+            <input type="checkbox" value="true" checked="@Model.OneNoteOnly" name="oneNoteOnly" id="oneNoteOnly" />           
+        </div>
         <div class="row space-between mt-1">
             <label for="customColor">Accent Colour: </label>
             <input type="color" value="@Model.CustomColor" name="customColor" id="customColor" />
