--- a/CompozeElectron/Views/Home/Help.cshtml
+++ b/CompozeElectron/Views/Home/Help.cshtml
@@ -3,8 +3,13 @@
 }
 
 <div class="text-center">
-    <h1 class="my-3">Welcome to <strong class="highlight-effect">Compoze</strong></h1>
-    <p>Our mission is to create a completely customizable, user friendly writing application.</p>
-    <p>We will eventually be cross-platform!</p>
-    <p>Sign up or log in to access your data.</p>
+    <h1 class="my-3">Compoze User Help</h1>
+    <p><strong>Save:</strong> Press ctrl + s on any document page to save it instantly.</p>
+    <p><strong>Search: </strong></p>
+    <ul>
+        <li>Within Document: Press ctrl + f to search for text in a document's content.</li>
+        <li>Anywhere: Press ctrl + shift + f to search for text in all documents in all projects.</li>
+    </ul>
+    <p><strong>Template: </strong>Press ctrl + t in a document to generate a template based on that document.</p>
+    <p><strong>New Project: </strong>File > New Project will create a new project for logged in users.</p>
 </div>
