--- a/CompozeElectron/Views/Shared/_Layout.cshtml
+++ b/CompozeElectron/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
                     <p class="recolor-bg nav-item active"><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></p>
                     <p class="recolor-bg nav-item"><a asp-area="" asp-controller="Account" asp-action="Login">Log In</a></p>
                 }
+                    <p class="recolor-bg nav-item"><a asp-area="" asp-controller="Home" asp-action="Help">Help</a></p>
             </div>
             <a href="javascript:void(0);" class="nav-icon">
                 <i class="fa-solid fa-bars"></i>
